--- a/src/styles.css
+++ b/src/styles.css
@@ -85,11 +85,11 @@ button {
 }
 
 .loading {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  min-height: 100vh;
   color: #000000;
   font-family: 'Caveat', cursive;
   font-size: 400%;
